--- a/contents/02-02-title.adoc
+++ b/contents/02-02-title.adoc
@@ -2,3 +2,13 @@
 
 === Sub Section 1
 
+.Second table
+|===
+|Column 1, Header Row |Column 2, Header Row
+
+|Cell in column 1, row 1
+|Cell in column 2, row 1
+
+|Cell in column 1, row 2
+|Cell in column 2, row 2
+|===
